--- a/index.css
+++ b/index.css
@@ -1,4 +1,70 @@
-#btn-showNextDate,#output2
+#btn-showNextDate,#output2,#msg
 {
     display: none;
+}
+
+html
+{
+    margin: 0;
+    background-color: aqua;
+}
+
+body
+{
+    margin: auto;
+    margin-top: 5rem;
+    width: 60%;
+    text-align: center;
+    border: 5px solid #000;
+    background-color: aliceblue;
+}
+#intro
+{
+    width: 90%;
+    margin: auto;
+    text-justify: auto;
+}
+main
+{
+    margin: 2em;
+    margin-top: 4em;
+}
+
+.container
+{
+    width:85%;
+    margin: 1.5em auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#msg
+{
+    font-size: 12px;
+}
+
+button
+{
+    width: 5rem;
+    height: 1.6rem;
+    margin: 1rem;
+    font-size: medium;
+}
+
+
+@media screen and (max-width: 800px) 
+{
+    body
+    {
+        margin: 2em;
+        width: 80%;
+    }
+    
+    .container
+    {
+        margin: 1em auto;
+    }
+
 }
