--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-#btn-showNextDate,#output2,#msg
+#btn-showNextDate,#output2,#output1,#msg
 {
     display: none;
 }
@@ -6,7 +6,7 @@
 html
 {
     margin: 0;
-    background-color: aqua;
+    background-image: url(bday-bg.jpg);
 }
 
 body
@@ -16,7 +16,8 @@ body
     width: 60%;
     text-align: center;
     border: 5px solid #000;
-    background-color: aliceblue;
+    background-color: rgb(235, 235, 235);
+    border-radius: 20px;
 }
 #intro
 {
@@ -39,20 +40,45 @@ main
     align-items: center;
     justify-content: center;
 }
-
+#output1
+{
+    font-weight: 800;
+    font-size: larger;
+    border: 1px solid #000;
+    padding: 5px;
+}
 #msg
 {
-    font-size: 12px;
+    font-size: 18px;
+    text-shadow: #000 20px;
 }
-
+#output-date,#count
+{
+    font-size: larger;
+    font-weight: 800;
+}
+#count,#msg
+{
+    color:rgb(238, 32, 32);
+    
+}
 button
 {
     width: 5rem;
     height: 1.6rem;
     margin: 1rem;
     font-size: medium;
+    font-weight: 600;
+    background-color: #4CA9B3;
+    border-radius: 5px;
+    border: 2px solid #000;
+    
 }
 
+#btn-showNextDate
+{
+    margin-top: 0;
+}
 
 @media screen and (max-width: 800px) 
 {
