--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 #btn-showNextDate,#output2,#output1,#msg
 {
     display: none;
@@ -7,6 +8,7 @@ html
 {
     margin: 0;
     background-image: url(bday-bg.jpg);
+    font-family: 'Open Sans', sans-serif;
 }
 
 body
@@ -25,10 +27,16 @@ body
     margin: auto;
     text-justify: auto;
 }
+#instruction
+{
+    font-size: smaller;
+    text-justify: auto;
+    margin: 2em;
+}
 main
 {
     margin: 2em;
-    margin-top: 4em;
+    margin-top: 1rem;
 }
 
 .container
