--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body
 {
     font-size: smaller;
     text-justify: auto;
-    margin: 2em;
+    margin: 5em;
 }
 main
 {
@@ -57,7 +57,7 @@ main
 }
 #msg
 {
-    font-size: 18px;
+    font-size: 16px;
     text-shadow: #000 20px;
 }
 #output-date,#count
@@ -65,7 +65,7 @@ main
     font-size: larger;
     font-weight: 800;
 }
-#count,#msg
+#count,#msg,#heart
 {
     color:rgb(238, 32, 32);
     
@@ -86,6 +86,12 @@ button
 #btn-showNextDate
 {
     margin-top: 0;
+}
+
+a{
+    text-decoration: none;
+    color: #000;
+    font-weight: 800;
 }
 
 @media screen and (max-width: 800px) 
